# trading.insolvent.app-backend

./: .gitignore  Cargo.toml  Decimals.md  README.md
exchange/: Cargo.toml  Decimals.md  README.md
exchange/common/: Cargo.toml  README.md
exchange/common/src/: config.rs  env.rs  future.rs  lib.rs  log.rs  log_util.rs  utils.rs
exchange/common/src/ws/: mod.rs  ws_session.rs
exchange/exchange/: Cargo.toml  README.md
exchange/exchange/core/: Cargo.toml
exchange/exchange/core/js/: package.json  zeromq_echo_server.js  zeromq_repl_server.js
exchange/exchange/core/src/model/: account.rs  accounting_service.rs  builder.rs  config.rs  execution_service.rs  instrument.rs  market.rs  mod.rs  resource.rs  select.rs  service.rs  subscription.rs
exchange/exchange/core/src/utils/: crypto.rs  future.rs  http_client.rs  http_session.rs  http_utils.rs  js.rs  mod.rs  sign.rs  throttle.rs  zeromq.rs
exchange/exchange/core/tests/: test_zeromq_client.rs
exchange/exchange/crates/binance/: Cargo.toml
exchange/exchange/crates/binance/src/: execution.rs  lib.rs  symbol.rs  urls.rs
exchange/exchange/crates/bitget/: Cargo.toml
exchange/exchange/crates/bitget/src/: execution.rs  lib.rs  private_ws.rs  rest.rs  symbol.rs  urls.rs
exchange/exchange/crates/bybit/: Cargo.toml
exchange/exchange/crates/bybit/src/: execution.rs  lib.rs  private_ws.rs  rest.rs  symbol.rs  urls.rs
exchange/exchange/crates/bybit/tests/: test_bybit.py
exchange/exchange/crates/coinbase/: Cargo.toml
exchange/exchange/crates/coinbase/src/: depth.rs  lib.rs  symbol.rs  trade.rs
exchange/exchange/crates/drift/: Cargo.toml  README.md
exchange/exchange/crates/drift/js/: package.json  rollup.config.mjs  tsconfig.json
exchange/exchange/crates/drift/src/: constants.rs  execution.rs  lib.rs  urls.rs
exchange/exchange/crates/drift/tests/: test_drift_js.rs
exchange/exchange/crates/gateio/: Cargo.toml
exchange/exchange/crates/gateio/src/: lib.rs  symbol.rs  urls.rs
exchange/exchange/crates/hyperliquid/: Cargo.toml
exchange/exchange/crates/kucoin/: Cargo.toml
exchange/exchange/src/: lib.rs  select.rs
exchange/exchange/src/exchange/: mod.rs
exchange/exchange/utils/: Cargo.toml
exchange/exchange/utils/src/: latency.rs  leverage.rs  lib.rs  orders.rs  portfolio.rs  symbols.rs  utils.rs
exchange/model/: Cargo.toml
exchange/model/src/: lib.rs
exchange/model/src/asset/: details.rs  info.rs  manager.rs  mod.rs  selector.rs
exchange/model/src/blockchain/: mod.rs  swap.rs  symbol.rs  token.rs  trade.rs
exchange/model/src/common/: enums.rs  location.rs  mod.rs  price.rs  quantity.rs
exchange/model/src/core/: date.rs  duration.rs  mod.rs  series.rs  slot.rs  time.rs  vec_ext.rs
exchange/model/src/instrument/: category.rs  code.rs  details.rs  enums.rs  manager.rs  mod.rs  selector.rs  simple.rs  symbol.rs  types.rs
exchange/model/src/market/: event.rs  feed.rs  funding_rate.rs  l2.rs  market.rs  mod.rs  ohlcvt.rs  price.rs  price_volume.rs  prices.rs  quote.rs  tob.rs  trade.rs  trades.rs
exchange/model/src/math/: mod.rs  range.rs  size.rs
exchange/model/src/utils/: mod.rs  perf.rs
exchange/model/src/utils/serde/: mod.rs  (+3 more)
exchange/model/src/wire/: jsonl.rs  mod.rs  packet.rs  perf.rs
lib/: Cargo.toml  README.md  datatable.rs  error_code.rs  handler.rs  lib.rs  listener.rs  log.rs  log_reader.rs  signal.rs  toolbox.rs  types.rs  utils.rs  warn.rs
lib/gluesql/: common.rs  mod.rs
lib/model/: endpoint.rs  lib.rs  service.rs  types.rs
lib/ws/: basics.rs  client.rs  conn.rs  headers.rs  mod.rs  server.rs  session.rs  subs.rs
service/user/: Cargo.toml  README.md  balance_manager.rs  config.rs  leger_manager.rs  lib.rs  main.rs  main_core.rs
service/user/benches/: README.md  requests.rs
service/user/db/: README.md  mod.rs
service/user/db/gluesql/: mod.rs  row_num_checker.rs
service/user/db/worktable/: balance.rs  l2orderbook.rs  mod.rs  order_manager.rs  orders.rs  position_manager.rs  positions.rs
service/user/docs/: user_alive_endpoints.json
service/user/endpoint_method/: auth.rs  bench.rs  decrypt_encrypted_key.rs  delete_encrypted_key.rs  get_accuracy_log.rs  get_best_bid_ask_cross.rs  get_best_bid_ask_cross_with_position.rs  get_debug_log.rs  get_encrypted_key.rs  get_event_1.rs  get_hedged_orders.rs  get_ledger.rs  get_livetest_fill_1.rs  get_order_per_strategy.rs  get_price_0.rs  get_price_difference.rs  get_signal_0.rs  get_signal_1.rs  get_signal_2.rs  get_spread_mean.rs  get_strategy_accuracy.rs  get_strategy_one_symbol.rs  get_strategy_zero_symbol.rs  get_symbol_2.rs  list_trading_symbols.rs  mod.rs  s3_capture_event.rs  set_encrypted_key.rs  set_strategy_status.rs  set_symbol_flag_1.rs  start_service.rs  status.rs  sub_best_bid_ask_cross_position.rs  sub_event_1.rs  sub_funding_rate.rs  sub_ledger_1.rs  sub_orders.rs  sub_position.rs  sub_price.rs  sub_price_0.rs  (+4 more)
service/user/endpoint_method/blacklist/: add_blacklist.rs  get_blacklist.rs  mod.rs  remove_blacklist.rs
service/user/endpoint_method/manual_trade/: cancel_or_close_position.rs  cancel_order.rs  mod.rs  place_order.rs
service/user/events/: mod.rs  price_change_and_diff.rs
service/user/execution/: batch.rs  mod.rs  registry.rs  router.rs
service/user/signals/: mod.rs  price.rs  price_change.rs  price_difference.rs  price_manager.rs  price_spread.rs
service/user/strategy/: README.md  broadcast.rs  data_factory.rs  instrument.rs  mod.rs  strategy_constants.rs  strategy_debug.rs  table_limiter.rs
service/user/strategy/strategy_four/: mod.rs  order_placement.rs
service/user/strategy/strategy_one/: README.md  bin_bid_predict_hyper_bid.rs  mod.rs  order_placement.rs  testing.rs
service/user/strategy/strategy_three/: mod.rs
service/user/strategy/strategy_two/: README.md  mod.rs  order_placement.rs
service/user/strategy/strategy_two_and_three/: capture_event.rs  constants.rs  event.rs  mod.rs  spread.rs
service/user/strategy/strategy_zero/: README.md  hyper_mark_crosses_bid.rs  mod.rs
service/user/task/: builder.rs  mod.rs  registry.rs
service/user/tests/: test_manual_trading.rs
(+172 files in other folders)
