[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.8" }
tracing = "0.1.37"
color-eyre = "0.6.2"
thiserror = "1"
clap = { version = "4.0.26", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
itertools = "0.12.1"
regex = "1.10.4"
libc = "0.2"
byteorder = "1.5.0"
hex = "0.4.3"
dashmap = "5.5.3"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
chrono = "0.4"
static_assertions = "*"
tokio-postgres = "*"
uuid = "1.8.0"
convert_case = "0.6.0"
urlencoding = "2.1.3"
hyper = { version = "1.3.1", features = ["full"] }
bytes = "1.6.0"
kanal = { version = "0.1.0-pre7", features = ["async"] }
postgres-from-row = "0.5.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde_path_to_error = "0.1"
async-trait = "0.1.74"
dotenvy = "0.15.7"
http = "1.1.0"
tracing-serde = "0.1.3"
parking_lot = "0.12.3"
