[package]
name = "trading-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
trading-model = { path = "../model" }
trading-exchange-core = { path = "./core" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.4.0"
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1.74"
eyre = "0.6.8"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"
tracing = "0.1.39"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"
chrono = "0.4.31"
secrecy = { version = "0.8.0", features = ["serde"] }
bytes = "1.5.0"
hmac = "*"
sha2 = "*"
percent-encoding = "2.3.0"
hex = "0.4.3"
base64 = "0.21.5"
ethers = "2.0.10"
thiserror = "1"
static_assertions = "1.1.0"
itertools = "0.12.0"
dashmap = "5.5.3"

trading-exchange-binance = { path = "./crates/binance", optional = true }
trading-exchange-bybit = { path = "./crates/bybit", optional = true }
trading-exchange-drift = { path = "./crates/drift", optional = true }
trading-exchange-coinbase = { path = "./crates/coinbase", optional = true }
trading-exchange-gateio = { path = "./crates/gateio", optional = true }
trading-exchange-hyperliquid = { path = "./crates/hyperliquid", optional = true }
trading-exchange-bitget = { path = "./crates/bitget", optional = true }

[features]
default = ["internal", "external"]
internal = ["binance", "bybit", "coinbase", "drift", "gateio", "hyperliquid", "bitget"]
external = []

binance = ["dep:trading-exchange-binance"]
bybit = ["dep:trading-exchange-bybit"]
drift = ["dep:trading-exchange-drift"]
coinbase = ["dep:trading-exchange-coinbase"]
gateio = ["dep:trading-exchange-gateio"]
hyperliquid = ["dep:trading-exchange-hyperliquid"]
bitget = ["dep:trading-exchange-bitget"]

