[package]
name = "trading-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3.6.1"
serde_with_macros = "3.6.1"
eyre = "0.6.8"
postgres-from-row = "0.5.2"
postgres-derive = "0.4.5"
postgres-types = { version = "0.2.6", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.40"
secrecy = { version = "0.8.0", features = ["serde"] }
csv = "1.3.0"
strum = "0.25.0"
strum_macros = "0.25.2"
dashmap = "5.5.3"
hashbrown = { version = "0.14.3", features = ["serde"] }
alloy-chains = { version = "0.1.7", features = ["serde"] }
alloy-primitives = { version = "0.6.2", features = ["serde"] }
thiserror = "1"
parse-display = "0.8.2"
indenter = "0.3.3"
malachite = "0.4.5"
derive-from-one = "0.1.0"
schemars = { version = "0.8", features = ["chrono", "derive"] }
interning = "0.2.3"
num_enum = "0.7.2"

[dev-dependencies]
float_eq = "1"
