[package]
edition = "2021"
name = "trading_be"
description = "trading backend (user)"
version = "0.1.5"

[features]
default = []

[[bench]]
name = "requests"
harness = false

[dev-dependencies]
ethers = "2.0.11"
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[dependencies]
# Internal
# even when the crate is optional, it still requires the auth src for the lock file
trading-exchange.workspace = true
lib.workspace = true
build.workspace = true
# External
libc.workspace = true
eyre.workspace = true
futures.workspace = true
num-traits.workspace = true
secrecy.workspace = true
serde.workspace = true
tokio.workspace = true
kanal.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rust_decimal.workspace = true
dashmap.workspace = true
gluesql.workspace = true
gluesql-derive.workspace = true
trading-model.workspace = true
serde_json.workspace = true
tempfile.workspace = true
async-trait.workspace = true
chrono.workspace = true
core_affinity.workspace = true
lazy_static.workspace = true
stable-hash.workspace = true
interning.workspace = true
base64.workspace = true
chacha_poly.workspace = true
num_enum.workspace = true
worktable.workspace = true
gluesql_shared_sled_storage.workspace = true
strum = "0.26.2"
strum_macros = "0.26.2"
crossbeam = "0.8.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = "0.7.10"
arrayvec = "0.7.4"
toml.workspace = true
clap.workspace = true
parking_lot.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
float_eq = "1.0.1"
ordered-float = "4.2.0"

[[bin]]
name = "trading_be"
path = "main.rs"

[lib]
name = "trading_be"
path = "lib.rs"

[package.metadata.deb]
maintainer = "insolvent capital"
copyright = "2024, insolvent capital"
depends = "systemd"
maintainer-scripts = "../../scripts/debian"
# assume there is deploy user already (as generated by preinst)
assets = [
    # binary (read execute)
    ["../../target/release/trading_be", "/usr/local/trading_be/trading_be", "755"],
    # systemd (read write)
    ["../../etc/systemd/trading_user.service", "/etc/systemd/system/trading_user.service", "665"],
    # config file (read + write for owner and group, read for others)
    ["../../etc/config.toml", "/etc/insolvent/trading/config.toml", "665"],
]
conf-files = ["/etc/insolvent/trading/config.toml"]
