[package]
name = "trading-exchange-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
trading-exchange = { path = "../../exchange" }
trading-model = { path = "../../model" }


tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
tracing = "*"
crossbeam = "0.8.2"
schemars = { version = "0.8.16", features = ["derive"] }
rand = "0.8.5"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
comfy-table = "7.1.0"