[package]
name = "trading-exchange-coinbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../../../common" }
trading-model = { path = "../../../model" }
trading-exchange-core = { path = "../../core" }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.4.0"
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1.74"
eyre = "0.6.8"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
http = "1.1.0"
